--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'blog'
-include 'common','eurake','security','infomanager','gateway','imgserver'
+include 'common','eurake','security','infomanager','gateway','imgserver','message'
