--- a/security/Dockerfile
+++ b/security/Dockerfile
@@ -15,4 +15,4 @@ ADD /build/libs/security-0.0.1-SNAPSHOT.jar app.jar
 # 指定项目暴露的端口号，与项目配置一样,即容器配置的暴露端口
 EXPOSE 9999
 #ENTRYPOINT 执行项目 app.jar。为了缩短 Tomcat 启动时间，添加一个系统属性指向 "/dev/urandom" 作为 Entropy Source
-ENTRYPOINT ["java", "-Xmx512m","-jar", "/app.jar"]
+ENTRYPOINT ["java", "-Xmx512m","-jar","-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=9999", "/app.jar"]
