--- a/security/src/main/resources/application.yml
+++ b/security/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     name: blog-auth-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 123456
-    url: jdbc:mysql://172.18.0.3:3306/blog?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+    username: ****
+    password: ****
+    url: jdbc:mysql://***:3306/blog?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
       auto-commit: true
