--- a/infomanager/src/main/resources/application.yml
+++ b/infomanager/src/main/resources/application.yml
@@ -14,9 +14,9 @@ spring:
     name: blog-infomanager-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 123456
-    url: jdbc:mysql://172.18.0.3:3306/blog?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+    username: ****
+    password: *****
+    url: jdbc:mysql://*****:3306/blog?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
       auto-commit: true
